# sdr-testing

./: .gitignore  LICENSE  README.md  api-integration.md  hardware-integration.md  troubleshooting.md
deploy/: docker-compose.yaml
examples/: README.md
examples/gnuradio/: fm_radio.grc
notebooks/: docker_scripts.py  launchable.ipynb  quickstart.ipynb  swqa_quickstart.ipynb
notebooks/.ipynb_checkpoints/: quickstart-checkpoint.ipynb
qa-tests/: README.md  check_selectors.py  debug_text_extraction.py  find_messages_generic.py  find_response.py  inspect_ui.py  quick_test.py  rag_query_error_handling_tests.md  rag_time_filter_tests.md  run_all_tests.py  test_cases_error_handling.md  test_cases_time_filtering.md  test_rag_error_handling.py  test_rag_time_filtering.py  test_selectors.py  test_text_methods.py
src/file-replay/: Dockerfile  README.md  pyproject.toml  replay.py
src/software-defined-radio/: Dockerfile  app.py  common.py  operators.py  params.yaml  pyproject.toml  riva_asr.py
